assets/css/styles.css
* {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

:root {
    --font-heading: Sen, san-serif;
}

html {
    font-size: 62.5%;
    font-family: 'Poppins', sans-serif;
    /* font-family: 'Sen', sans-serif; */
}

body {
    font-size: 1.6rem;
}

/* Common */
.main-content {
    width: 1170px;
    max-width: calc(100% - 28px);
    margin: 0 auto;
}

a {
    text-decoration: none;
}

.btn {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    min-width: 118px;
    padding: 12px 18px;
    line-height: 50px;
    background: #171100;
    border-radius: 999px;
    font-weight: 600;
    font-size: 1.6rem;
    line-height: 1.75;
    text-align: center;
    color: #FFFFFF;
    cursor: pointer;
}

.btn:hover {
    opacity: 0.9;
}

/* Header */
.header {
    padding-top: 30px;
}

.header.fixed {
    position: sticky;
    top: -30px;
    background: #FFFCF4;
}

.header .main-content {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 4px 0;
}

.header .nav {
    margin-left: auto;
}

.header .nav ul {
    display: flex;
    gap: 10px;
}

.header .nav li {
    padding: 16px 8px;
}

.header .nav li a {
    font-weight: 400;
    font-size: 1.6rem;
    line-height: 1.75;
    text-align: center;
    color: #5F5B53;
}

.header .nav li a.active,
.header .nav li a:hover {
    -webkit-text-stroke-width: 0.04ex;
    position: relative;
    color: #171100;
}

.header .nav li a.active::after,
.header .nav li a:hover::after {
    position: absolute;
    content: "";
    width: 12px;
    height: 2px;
    background: #171100;
    border-radius: 1px;
    bottom: -2px;
    left: 0;
}

.header .signup-btn {
    min-width: 144px;
    margin-left: 54px;
}

/* Hero */
.hero {
    background: #FFFCF4;
    padding: 64px 0;
}

.hero .main-content {
    display: flex;
    align-items: center;
    gap: 130px;
}

.hero .main-content .media-block {
    width: 48%;
    position: relative;
}

.hero .main-content .info-block {
    width: 52%;
}

.hero .main-content .img {
    display: block;
    width: 470px;
    height: 685px;
    object-fit: cover;
}

.hero .media-info {
    position: absolute;
    right: 0;
    bottom: 48px;
    padding: 24px;
    width: 270px;
    background: #FFFFFF;
    box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.05);
    border-radius: 12px;
}

.hero .media-info .item {
    display: flex;
    gap: 16px;
}
.hero .media-info .item + .item {
    margin-top: 14px;
}

.hero .media-info .item .info {
    display: flex;
    flex-direction: column;
}

.hero .media-info .item .info .desc {
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 1.86;
    color: #5F5B53;
}

.hero .media-info .item .info .label {
    font-weight: 600;
    font-size: 1.8rem;
    line-height: 1.67;
    color: #171100;
}

.hero .info-block .title {
    font-family: var(--font-heading);
    font-weight: 700;
    font-size: 5.8rem;
    line-height: 1.17;
    letter-spacing: -0.02em;
    color: #171100;
}

.hero .info-block .desc {
    font-weight: 400;
    font-size: 1.8rem;
    line-height: 1.67;
    color: #5F5B53;
    padding: 22px 0;
}

.hero .info-block .cta-group {
    display: flex;
    align-items: center;
    gap: 28px;
    margin: 16px 0 36px 0;
}

.hero .info-block .cta-btn {
    min-width: 180px;
    height: 64px;
    line-height: 64px;
    background: #FFB900;
}

.hero .info-block .cta-group .watch-btn {
    display: flex;
    gap: 14px;
    align-items: center;
    border: none;
    background: transparent;
    cursor: pointer;
}

.hero .info-block .cta-group .watch-btn span {
    font-weight: 600;
    font-size: 18px;
    line-height: 1.67;
    color: #171100;
}
.hero .info-block .cta-group .watch-btn:hover img {
    border-radius: 999px;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.07);
}
.hero .info-block .cta-group .watch-btn:hover span {
    text-decoration: underline;
}

.hero .info-block .recent {
    display: flex;
    gap: 28px;
}

.hero .info-block span {
    font-weight: 400;
    font-size: 1.8rem;
    line-height: 1.67;
    color: #5F5B53;
}

.hero .info-block strong {
    font-weight: 700;
    font-size: 4.4rem;
    line-height: 1.23;
    color: #171100;
}
.hero .info-block .stats {
    padding-bottom: 8px;
}

